# cue-rust

./: .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: build.yml
apps/cue/: Cargo.toml
apps/cue-rs/: Cargo.toml
apps/cue-rs/src/: main.rs
apps/cue-rs/tests/: cli_phase7.rs  vendor_scripts.rs
apps/cue/src/: main.rs
apps/cue/tests/: cli_phase7.rs  vendor_scripts.rs
apps/server/: Cargo.toml
crates/adt/: Cargo.toml
crates/adt/src/: lib.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/core/: Cargo.toml
crates/encoding/: Cargo.toml
crates/encoding/src/: lib.rs
crates/eval/: Cargo.toml
crates/eval/src/: lib.rs
crates/loader/: Cargo.toml
crates/loader/src/: lib.rs
crates/sdk/: Cargo.toml
crates/sdk/benches/: phase9.rs
crates/sdk/src/: lib.rs
crates/sdk/tests/: compatibility.rs  vendor_corpus.rs
crates/source/: Cargo.toml
crates/source/src/: lib.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: ast.rs  lib.rs  parser.rs
docs/: index.md
docs/guides/: developer-guide.md  developer-guide.zh-CN.md  user-guide.md  user-guide.zh-CN.md
docs/issues/: 0001-defaulted-disjunction-non-default-unify-conflict.md  0002-unset-optional-fields-block-concrete-export.md  0003-value-unify-collapses-defaulted-disjunction-fields.md  0004-default-expr-sibling-reference-not-resolved-after-unification.md  0005-sdk-facade-does-not-reexport-diagnostic-severity-span.md  0006-value-unify-closedness-rejects-present-optional-field.md  0007-yaml-toml-export-silently-rounds-large-numbers.md  0008-source-limits-checked-after-full-file-read.md  0009-string-escape-decoding-is-incomplete.md  0010-disjunction-operations-have-unbounded-cartesian-expansion.md  0011-parser-compiler-have-no-nesting-depth-limit.md  0012-ci-misses-local-quality-gates.md  0013-encoding-rejects-underscored-number-literals.md  0014-invalid-number-separators-accepted-and-normalized.md  0015-local-import-path-traversal-escapes-module-cache.md  0016-symlink-file-arguments-bypass-loader-policy.md  README.md
docs/research/: spike-cue-test-corpus.md  spike-decimal-regex-semantics.md  spike-dependency-audit.md  spike-rust-arena-vertex.md  spike-rust-parser-stack.md  spike-rust-scheduler-port.md  study-cue-architecture.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decoder.rs  scanner.rs
specs/: 00-cue-rust-prd.md  10-cue-rust-data-model-design.md  11-cue-rust-parser-design.md  12-cue-rust-loader-design.md  13-cue-rust-adt-runtime-design.md  14-cue-rust-compiler-design.md  15-cue-rust-evaluator-design.md  20-cue-rust-sdk-design.md  21-cue-rust-encoding-design.md  50-cue-rust-cli-design.md  61-cue-rust-crates-features-design.md  70-cue-rust-security-performance-testing-plan.md  80-cue-rust-glossary.md  90-cue-rust-roadmap.md  91-cue-rust-impl-plan.md  92-phase9-parity-gap-impl-plan.md  93-phase9-open-list-impl-plan.md  94-phase9-alias-label-impl-plan.md  95-phase9-stdlib-surface-impl-plan.md  96-phase9-string-validator-impl-plan.md  97-phase9-parity-completion-tranche-impl-plan.md  99-cue-rust-key-decisions.md  README.md  index.md
