[workspace]
members = ["crates/*", "apps/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Tyr Chen <tchen@tyrchen.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/cue-rust"
repository = "https://github.com/tyrchen/cue-rust"
homepage = "https://github.com/tyrchen/cue-rust"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.102"
bigdecimal = "0.4.10"
camino = "1.2.2"
clap = { version = "4.6.1", features = ["derive"] }
criterion = "0.8.2"
indexmap = "2.14.0"
libm = "0.2.16"
miette = { version = "7.6.0", default-features = false }
noyalib = "0.0.6"
num-bigint = "0.4.6"
proptest = "1.11.0"
regex = "1.12.3"
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["arbitrary_precision"] }
thiserror = "2.0.18"
tokio = { version = "1.52", features = ["fs", "io-util", "process", "rt", "rt-multi-thread", "macros"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
typed-builder = "0.23.2"

# workspace crates
cue-rust-adt = { version = "0.1.0", path = "crates/adt" }
cue-rust-compiler = { version = "0.1.0", path = "crates/compiler" }
cue-rust-encoding = { version = "0.1.0", path = "crates/encoding" }
cue-rust-eval = { version = "0.1.0", path = "crates/eval" }
cue-rust-loader = { version = "0.1.0", path = "crates/loader" }
cue-rust-source = { version = "0.1.0", path = "crates/source" }
cue-rust-syntax = { version = "0.1.0", path = "crates/syntax" }
cue-rust = { version = "0.1.0", path = "crates/sdk" }

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
