[package]
name = "cue-rs"
description = "Command-line interface for cue-rust."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[[bin]]
name = "cue-rs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
cue-rust.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
