[package]
name = "cue-rust-cli"
description = "Command-line interface for cue-rust."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation = "https://docs.rs/cue-rust-cli"
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true

[[bin]]
name = "cue"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
cue-rust.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
