[package]
name = "cue-rust-adt"
description = "Semantic graph and runtime data structures for cue-rust."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
indexmap.workspace = true

[lints]
workspace = true
