[package]
name = "cue-rust-compiler"
description = "AST-to-ADT compiler for cue-rust."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation = "https://docs.rs/cue-rust-compiler"
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true

[dependencies]
cue-rust-adt.workspace = true
cue-rust-loader.workspace = true
cue-rust-source.workspace = true
cue-rust-syntax.workspace = true
thiserror.workspace = true

[lints]
workspace = true
