[package]
name = "cue-rust-encoding"
description = "External data encoders and decoders for cue-rust."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"

[dependencies]
cue-rust-eval.workspace = true
cue-rust-source.workspace = true
indexmap.workspace = true
noyalib.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[lints]
workspace = true
