[package]
name = "cue-rust-eval"
description = "Evaluator, validation, and export profiles for cue-rust."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"

[dependencies]
bigdecimal.workspace = true
cue-rust-adt.workspace = true
cue-rust-source.workspace = true
indexmap.workspace = true
libm.workspace = true
num-bigint.workspace = true
regex.workspace = true
thiserror.workspace = true

[lints]
workspace = true
