[package]
name = "cue-rust-loader"
description = "Package, module, overlay, and data-file loader for cue-rust."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation = "https://docs.rs/cue-rust-loader"
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
rust-version.workspace = true

[dependencies]
camino.workspace = true
cue-rust-source.workspace = true
cue-rust-syntax.workspace = true
thiserror.workspace = true
tokio.workspace = true
typed-builder.workspace = true

[lints]
workspace = true
