[package]
name = "cue-rust"
description = "Public SDK facade for cue-rust."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "cue_rust"

[dependencies]
camino.workspace = true
cue-rust-adt.workspace = true
cue-rust-compiler.workspace = true
cue-rust-encoding.workspace = true
cue-rust-eval.workspace = true
cue-rust-loader.workspace = true
cue-rust-source.workspace = true
cue-rust-syntax.workspace = true
thiserror.workspace = true

[lints]
workspace = true
