[package]
name = "cue-rust-source"
description = "Source files, spans, and diagnostics for cue-rust."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
miette.workspace = true
thiserror.workspace = true

[lints]
workspace = true
