[package]
name = "cue-rust-syntax"
description = "Scanner, parser, AST, and syntax services for cue-rust."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"

[dependencies]
cue-rust-source.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true

[lints]
workspace = true
